# lpctest

./: Cargo.toml  Embed.toml  build_.rs  memory.x
.cargo/: config.toml
.scripts/: debug.gdb  debug.sh
src/: main.rs
